# SynapCore

./: Cargo.toml  README.md  count_lines.py  flake.nix
core/: Cargo.toml  LLM_API聚合平台调查报告.md  README.md  flutter_rust_协同方案报告.md  flutter_rust_协同方案调查报告.md  flutter_rust协同方案调查报告.md  生命科学竞赛含金量分析报告.md
core/src/: assistant.rs  config.rs  conversation.rs  error.rs  lib.rs
core/src/memory/: emdedding.rs  mem.rs  memoryFormat.md  mod.rs
core/src/read_config/: json_err.rs  mod.rs
core/src/request_body/: agent.rs  messenge.rs  mod.rs  post.rs  response.rs  session.rs  tool_call.rs  tool_define.rs
provider/: Cargo.toml  README.md
provider/pending/home/mypenfly/projects/synapcore/core/: README.md
provider/src/: lib.rs  provider_cmd.rs
provider/src/auto_loop/: README.md  auto.rs  mod.rs
provider/src/notify/: mod.rs
provider/src/timer/: README.md  mod.rs
src-flutter/: Cargo.toml
tools/: Cargo.toml  README.md  daily_news.py  test.toml  test_revise.txt
tools/src/: error.rs  lib.rs  tool_response.rs
tools/src/bash/: README.md  error.rs  mod.rs
tools/src/define_call/: mod.rs  tool_call.rs  tool_define.rs
tools/src/executer/: mod.rs
tools/src/fetch_url/: error.rs  mod.rs
tools/src/files_extract/: extract_error.rs  mod.rs
tools/src/files_system/: error.rs  mod.rs
tools/src/files_write/: mod.rs
tools/src/note_book/: fmt.md  mod.rs
tools/src/outer/: README.md  config.rs  mod.rs
tools/src/search_tools/: mod.rs
tools/src/skills_book/: README.md  mod.rs
tools/src/timer/: error.rs  mod.rs
tools/src/todo_list/: error.rs  mod.rs
tools/src/web_search/: error.rs  mod.rs
tools/~/.config/synapcore/tools/: tools.toml
tui/: Cargo.toml  README.md
tui/src/: main.rs
tui/src/app/: README.md  app_event.rs  draw.rs  mod.rs  provider_client.rs  state.rs  task_store.rs
tui/src/app/ui/: logo.txt  mod.rs  start_page.rs  task_page.md  task_page.rs
