[package]
name = "synapcore_core"
edition.workspace = true
version.workspace = true

[dependencies]
tools = { path = "../tools"}


reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dotenv = "0.15"
futures-util = "0.3"   # 用于流式处理
uuid = { version = "1.22.0", features = ["v4"] }
chrono = "0.4"
base64 = "0.22.1"
regex = "1"

#知识库
rusqlite = { version = "0.39", features = ["bundled"]}
sqlite-vec = "0.1"

thiserror = "2.0"

dirs = "5.0"
r2d2_sqlite = "0.33.0"
r2d2 = "0.8.10"
shellexpand = "3"
# chrono = "0.4.44"
