[package]
name = "tools"
edition.workspace = true
version.workspace = true

[dependencies]
thiserror = "2.0"
serde = { version = "1",features = ["derive"] }
serde_json = "1"
shellexpand = "3"
tokio = {version = "1", features = ["full"]}
toml = "0.8"
reqwest = {version = "0.11", features = ["json"]}
dirs = "5.0"

#文件处理
docx-rs = "0.4"
pdf-extract = "0.7"
quick-xml = "0.36"
csv = "1.3"
base64 = "0.22.1"

walkdir = "2.5"
html2text = "0.12"
